<resources>
    <string name="app_name">길세권</string>
    <string name="title_activity_join">JoinActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_category">카테고리</string>
    <string name="title_ranking">랭킹</string>
    <string name="title_add">가게 등록</string>
    <string name="title_mypage">My 페이지</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_text">로그인</string>
</resources>